<resources>
    <string name="app_name">Record Shop Application</string>
    <string name="albumCover">%s album cover</string>
    <string name="artistImage">%s artist image</string>
    <string name="dateOfBirth">Date of Birth: </string>
    <string name="releaseDate">Release Date: </string>
    <string name="genreView"><b><i>%s</i></b></string>
    <string name="cancel">cancel</string>
    <string name="change_image">Change Image</string>
    <string name="name">Name</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="artist">Artist</string>
    <string name="stock_available">Stock Available</string>
    <string name="submit_album_button">Submit Album Button</string>
    <string name="create">CREATE</string>
    <string name="add_an_album">add an album</string>
    <string name="select">Select</string>
    <string name="stock_availble_edit_view_number">100</string>
    <string name="select_date">Select Date</string>
    <string name="stock">Stock</string>
    <string name="list_of_genres">List of genres</string>
    <string name="list_of_artists">List of Artists</string>
    <string name="description">Description</string>
    <string name="image">%s image</string>
    <string name="biography">Biography</string>
    <string name="submit_artist_button">Submit Artist Button</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="back_home">Back Home</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_album_button">Delete Album Button</string>
    <string name="back_to_album">Back to Album</string>
</resources>