<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.northcoders.recordshopapplication.util.Converter" />

        <variable
            name="album"
            type="com.northcoders.recordshopapplication.model.Album" />

        <variable
            name="artist"
            type="com.northcoders.recordshopapplication.model.Artist" />

        <variable
            name="clickHandler"
            type="com.northcoders.recordshopapplication.ui.edit.EditAlbumClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:padding="15sp"
        tools:context=".ui.edit.EditAlbumActivity">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/light_black"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/cancelButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:onClick="@{clickHandler::onCancelAlbumEditBtn}"
                android:text="@string/cancel"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerLayout">

            <LinearLayout
                android:id="@+id/albumLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/addAlbumCoverView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/my_rect"
                        android:contentDescription="@{@string/albumCover(album.title)}"
                        android:elevation="2dp"
                        android:src="@{album.imageUrl}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_launcher_background" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/changeAlbumCoverView"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:background="@android:color/transparent"
                    android:text="@string/change_image"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="Change Image" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_layout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="15dp"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color_selector"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/albumTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={album.title}"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/artist_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/artist"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="15dp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color_selector"
                    app:hintTextAppearance="@style/CustomHintTextAppearance"
                    app:hintTextColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/title_layout">

                    <AutoCompleteTextView
                        android:id="@+id/artist_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/list_of_artists"
                        android:inputType="none"
                        android:text="@={artist.name}"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_layout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="15dp"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color_selector"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/albumDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={album.description}"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/release_date_layout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_date"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="15dp"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color_selector">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/albumReleaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="date"
                        android:text="@={album.releaseDate}"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/albumReleaseDateButton"
                        style="@style/CustomButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/select_date"
                        app:layout_constraintStart_toStartOf="parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/genre_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/genre"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="15dp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color_selector"
                    app:hintTextAppearance="@style/CustomHintTextAppearance"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/genre_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/list_of_genres"
                        android:inputType="none"
                        android:text="@={album.genre}"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/stock_layout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stock"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="15dp"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color_selector"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ingredientQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={Converter.intToString(album.stock)}"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/updateAlbumButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/green"
                        android:contentDescription="@string/submit_album_button"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="15dp"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/deleteAlbumButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/red"
                        android:contentDescription="@string/delete_album_button"
                        android:onClick="@{clickHandler::onDeleteAlbumBtn}"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="15dp"
                        android:text="@string/delete"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>